--- a/styles1.css
+++ b/styles1.css
@@ -1,4 +1,4 @@
-.vik {
+.vik, .footer {
     text-align: center;
     padding-left: 265px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
